COMMIT 4.2 Aplicación totalmente funcional, con ayuda, SIN IMAGENES.

--- a/help_Accesos/html/btnAccesos.html
+++ b/help_Accesos/html/btnAccesos.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>COMO INTRODUCIR UNA AYUDA</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>¿COMO INTRODUCIR UNA AYUDA?</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     </head>
-    <body>
-	
-        <p>Para introducir un acceso tenemos que seleccionar un cliente en nuestra tabla de clientes
+    <body>	
+        <p>
+		Para INTRODUCIR UN ACCESO tenemos que seleccionar un cliente en nuestra tabla de clientes
 			bien podemos elegir un cliente que haya introducido un acceso ultimamente o buscar mediante
-			el botón de busqueda y seleccionar un cliente.</p>
-		
+			el botón de busqueda y seleccionar un cliente.
+		</p>
     </body>
 </html>
